--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r app.js"
+    "dev": "nodemon -r dotenv/config app.js",
+    "createTable": "node -r dotenv/config ./db/scripts/createTable.js",
+    "deleteTable": "node -r dotenv/config ./db/scripts/deleteTable.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   },
   "type": "module"
