--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config app.js",
+    "dev": "nodemon -r dotenv/config index.js",
     "createTable": "node -r dotenv/config ./db/scripts/createTable.js",
     "deleteTable": "node -r dotenv/config ./db/scripts/deleteTable.js"
   },
